--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,17 @@
 			<artifactId>selenium-chrome-driver</artifactId>
 			<version>4.0.0-alpha-1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.0.0-beta7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-support</artifactId>
+			<version>4.0.0-alpha-1</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
